# alexis

./: README.md  alexis.opam  dune-project
.github/workflows/: dune_runtest.yml
examples/: dune  import.ml  ml_lang.ml  ml_lang.mli  query_lang.ml  query_lang.mli
lexcaster/: alexis_lexcaster.ml  dune  import.ml  lexcaster.ml  lexcaster.mli
public/: alexis.ml  dune  regex_dfa.ml  regex_dfa.mli
src/: alexis_lib.ml  dune  import.ml  lexer.ml  lexer.mli  lexer_intf.ml  regex_dfa.ml  regex_dfa.mli
test/: dune  import.ml  test_lex.ml  test_regex_dfa_gen.ml  test_regex_dfa_iteration.ml  test_regex_dfa_merge.ml  util.ml  util.mli
util/: alexis_util.ml  dune  source_position.ml  source_position.mli  with_errors.ml  with_errors.mli
